09/deployment-cache.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
        - name: cache
          image: praqma/network-multitool
          ports:
            - containerPort: 8081
            - containerPort: 8444
