09/test-client.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-client
spec:
  containers:
    - name: curl
      image: curlimages/curl:8.8.0
      command: ["sleep", "3600"]
  restartPolicy: Always
